# SyntacticTypingTest

./: .gitignore  CMakeLists.txt  README.md  documenthandler.cpp  documenthandler.h  highlighter.cpp  highlighter.h  main.cpp
qml/: Editor.qml  EnglishPage.qml  MainWindow.qml  TestPage.qml
test/: EnglishPageExample.txt  TestPageExample.txt
